infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-conversation-web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-conversation-web-app
  template:
    metadata:
      labels:
        app: live-conversation-web-app
    spec:
      containers:
      - name: live-conversation-web-app
        image: key77/live-conversation_web-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
