infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-conversation-web-app-service
spec:
  selector:
    app: live-conversation-web-app
  ports:
  - name: live-conversation-web-app-service
    port: 8000
    targetPort: 8000
    protocol: TCP
